proyecto corregido con tablas git remote add origin .

--- a/productos.html
+++ b/productos.html
@@ -4,37 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 1</title>
+    <title>Agencia de Diseño Web y Marketing Digital - MiSitioenLaNet</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
-<body style="background-color: #DCE6F5">
-    <ol>
-        <li><a href="./index.html"> Inicio</a></li>
-        <li><a href="#"> Página1</a></li>
-        <li><a href="./pagina2.html"> Página2</a></li>
-       </ol>
-     <!-- para agregar comentarios no visibles, es Ctl K y luego C -->
-    <h1 style="color:#649de7; font-size: 60px; text-align: center; "> ¿Querés tener presencia en internet?</h1>
-    <h2>Aquí te cuento como tener tu web con poca inversión en unos breves pasos</h2>
-    <h2>Esta es una Oferta especial para emprendedores y profesionales</h2>  
+<body>
+    <table class="encabezado">
+        <tr>
+            <th><img src="./img/logoAgencia.png"></th>
+            <th><h3><a href="./index.html">Inicio</a></h3></th>
+            <th><h3><a href="#">Productos</a></h3></th>
+            <th><h3><a href="./nosotros.html">Nosotros</a></h3></th>
+            <th><h3><a href="#contacto">Contacto</a></h3></th>
+        </tr>
+    </table>
+
+    <table class="footer" id="contacto">
+        <tr>
+            <th><img src="./img/logoAgencia.png"></th>
+            <th><h3>Menú</h3></th>
+            <th><h3>Seguinos en</h3></th>
+        </tr>
+        <tr>
+            <td>Si no estás, no existís</td>
+            <td><a href="./index.html">Inicio</a>
+                <br><a href="#">Productos</a>
+                <br><a href="./nosotros.html">Nosotros</a>
+                <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSckBKNcGfStT4NwInYEKjjncRi_xJC8_oNyHp9mYjIIJjKarA/viewform">Contacto</a></td>
+            <td>
+                <a href="https://wa.me/5492995184587?text=Hola%20quisiera%20hacer%20una%20consulta"><img src="./img/IconoWasap.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./img/IconoInsta.png" alt=""></a>
+                <a href="https://www.facebook.com/"><img src="./img/IconoFace.png" alt=""></a>
+            </td>
+        </tr>
+    </table>
     
-    <h3>¿Cuál es la importancia de tener un sitio web hoy en día?</h3>
-    <p style="background-color: #ebf0f7; color: #c22727; text-align: justify;">La desconfianza generalizada por lo nuevo o el conformismo es un grave error que cometen los negocios hoy en día. En un mundo digitalizado, es más que recomendable seguir el mismo sentido de las tendencias tecnológicas y modernas. Esto nuevo que aparece con el tiempo puede ser aprovechado para nuestro beneficioso. Una de esos tendencias modernas de hoy en día son los sitios web. Tener un sitio web es fundamental para poder captar a potenciales clientes que lo visitan día a día con la finalidad de conocer más sobre su negocio.</p>
-    <h3 style="color: #649de7;">Beneficios de tener un sitio web</h3>
-    <ul>
-       <!-- Lista desordenada -->
-        <li style="font-family:verdana ;">Un sitio web es la mejor manera de mostrar tus productos/servicios</li>
-        <li style="font-family:courier ;">En combinación con las redes podes crear un espacio para interactuar permanentemente con tus clientes</li>
-        <li>Aquí vas a lograr credibilidad y confianza con ellos</li>
-        <li>Tu negocio online puede estar generando ventas los 365 días del año de forma automática</li>
-        <li>A través de herramientas especializadas, podes analizar el comportamiento de los usuarios mientras visitan tu sitio web, así mejorar tu propuesta comercial.</li>
-        <li>Y por último..., si no estás en la web es como si no existieras</li><br>
-        <img src="./img/WBD.png" alt="Diseño Web" width="50%" height="50%">
-        <h3 style="color: #649de7;">Seguí estos pasos para tener tu web</h3>
-    <p></p>
-    <ol>
-        <li>Tenes que tenes un dominio web. </li>
-        <li>lista ordenada</li>
-    </ol><br>
-    <img src="./img/img1.jpg" alt="esto es img1">
 </body>
 </html>
