git commit add origin .

--- a/nosotros.html
+++ b/nosotros.html
@@ -11,13 +11,42 @@
     <table class="encabezado">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
-            <th><h3><a href="#">Inicio</a></h3></th>
+            <th><h3><a href="./index.html">Inicio</a></h3></th>
             <th><h3><a href="./productos.html">Productos</a></h3></th>
-            <th><h3><a href="./nosotros.html">Nosotros</a></h3></th>
+            <th><h3><a href="#">Nosotros</a></h3></th>
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
-
+    <h1>Quiénes somos</h1>
+    <p>
+        Somos una agencia dedicada ayudar a emprendimientos y empresas a conectar con su público, otorgando herreamientas y capacitaciones para iniciar en el mercado virtual.
+        Nuestra misión es acercar los negocios al mercado virtual, dándoles la oportunidad de crecer y desarrollarse en el mundo informático.
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, molestiae? Expedita, eligendi aspernatur dolorem facilis maiores alias, dolorum voluptatibus quibusdam placeat beatae ullam exercitationem quod, quasi harum rem illum ipsam?
+        Earum voluptas, praesentium laudantium facilis, labore, dolores in non omnis illo esse cumque! Maiores numquam amet alias eveniet magni exercitationem impedit facilis perspiciatis consectetur iusto commodi, reprehenderit ullam, soluta voluptatibus.
+        Ratione impedit exercitationem vero harum. Tempore minima nobis aliquam sunt. Facere cum, quos dolorum quis aliquid facilis soluta rem recusandae possimus excepturi accusantium accusamus est modi, minima assumenda, debitis eaque.
+    </p>
+    <table>
+        <tr>
+            <th>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sed provident tempore asperiores beatae nisi sit cum officia amet maxime nobis nemo, maiores similique est quibusdam quo excepturi reprehenderit et.
+                Eligendi enim voluptates, exercitationem mollitia laudantium excepturi dolor nostrum ex, dignissimos, et aliquid! Fugit exercitationem ratione adipisci optio accusamus. Voluptas quibusdam fuga mollitia aspernatur delectus ab quo magni, corrupti impedit?
+                Excepturi incidunt reiciendis quasi. Odit consectetur aut nihil a ab fuga, dignissimos officia, minus reprehenderit modi doloribus accusantium ipsam, repellat fugiat unde suscipit excepturi! Quisquam tenetur minima temporibus in recusandae?
+            </th>
+            <th>
+                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="50%" width="50%"></a>
+            </th>
+        </tr>
+        <tr>
+            <th>
+                <img src="./img/MIH.png" alt="Juan Carlos Gomez" height="50%" width="50%"></a>
+            </th>
+            <th>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sed provident tempore asperiores beatae nisi sit cum officia amet maxime nobis nemo, maiores similique est quibusdam quo excepturi reprehenderit et.
+                Eligendi enim voluptates, exercitationem mollitia laudantium excepturi dolor nostrum ex, dignissimos, et aliquid! Fugit exercitationem ratione adipisci optio accusamus. Voluptas quibusdam fuga mollitia aspernatur delectus ab quo magni, corrupti impedit?
+                Excepturi incidunt reiciendis quasi. Odit consectetur aut nihil a ab fuga, dignissimos officia, minus reprehenderit modi doloribus accusantium ipsam, repellat fugiat unde suscipit excepturi! Quisquam tenetur minima temporibus in recusandae?
+            </th>
+        </tr>
+    </table>
     <table class="footer" id="contacto">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
@@ -26,17 +55,16 @@
         </tr>
         <tr>
             <td>Si no estás, no existís</td>
-            <td><a href="#">Inicio</a>
+            <td><a href="./index.html">Inicio</a>
                 <br><a href="./productos.html">Productos</a>
-                <br><a href="./nosotros.html">Nosotros</a>
+                <br><a href="#">Nosotros</a>
                 <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSckBKNcGfStT4NwInYEKjjncRi_xJC8_oNyHp9mYjIIJjKarA/viewform">Contacto</a></td>
             <td>
-                <a href="https://wa.me/5492995184587?text=Hola%20quisiera%20hacer%20una%20consulta"><img src="./img/IconoWasap.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="./img/IconoInsta.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="./img/IconoFace.png" alt=""></a>
+                <a href="https://wa.me/5492995184587?text=Hola%20quisiera%20hacer%20una%20consulta"><img src="./img/IconoWasap.png" alt="whatsapp"></a>
+                <a href="https://www.instagram.com/"><img src="./img/IconoInsta.png" alt="instagram"></a>
+                <a href="https://www.facebook.com/"><img src="./img/IconoFace.png" alt="facebook"></a>
             </td>
         </tr>
     </table>
-    
 </body>
 </html>
