--- a/productos.html
+++ b/productos.html
@@ -17,7 +17,9 @@
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
-
+    <table>
+        
+    </table>
     <table class="footer" id="contacto">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
@@ -32,8 +34,8 @@
                 <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSckBKNcGfStT4NwInYEKjjncRi_xJC8_oNyHp9mYjIIJjKarA/viewform">Contacto</a></td>
             <td>
                 <a href="https://wa.me/5492995184587?text=Hola%20quisiera%20hacer%20una%20consulta"><img src="./img/IconoWasap.png" alt=""></a>
-                <a href="https://www.instagram.com/"><img src="./img/IconoInsta.png" alt=""></a>
-                <a href="https://www.facebook.com/"><img src="./img/IconoFace.png" alt=""></a>
+                <a href="https://www.instagram.com/"><img src="./img/IconoInsta.png" alt="instagram"></a>
+                <a href="https://www.facebook.com/"><img src="./img/IconoFace.png" alt="facebook"></a>
             </td>
         </tr>
     </table>
