--- a/nosotros.html
+++ b/nosotros.html
@@ -21,29 +21,28 @@
     <p>
         Somos una agencia dedicada ayudar a emprendimientos y empresas a conectar con su público, otorgando herreamientas y capacitaciones para iniciar en el mercado virtual.
         Nuestra misión es acercar los negocios al mercado virtual, dándoles la oportunidad de crecer y desarrollarse en el mundo informático.
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil, molestiae? Expedita, eligendi aspernatur dolorem facilis maiores alias, dolorum voluptatibus quibusdam placeat beatae ullam exercitationem quod, quasi harum rem illum ipsam?
-        Earum voluptas, praesentium laudantium facilis, labore, dolores in non omnis illo esse cumque! Maiores numquam amet alias eveniet magni exercitationem impedit facilis perspiciatis consectetur iusto commodi, reprehenderit ullam, soluta voluptatibus.
-        Ratione impedit exercitationem vero harum. Tempore minima nobis aliquam sunt. Facere cum, quos dolorum quis aliquid facilis soluta rem recusandae possimus excepturi accusantium accusamus est modi, minima assumenda, debitis eaque.
+        Impulsamos a nuestros clientes a desarrollar un plan de trabajo factible estableciendo objetivos de corto y mediano plazo, a través de la toma de decisiones estratégicas
+        apostando por una espiral positiva de experiencia, innovación, creatividad, respaldo de seguridad y proactividad.
     </p>
     <table>
         <tr>
+            <td>
+                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="30%" width="30%">
+            </td>
             <td>
                 Con más de 20 años trabajando con abogados y con su propio software desarrollado,
                 hoy se enfoca en la gestión de diversos estudios jurídicos con la implementación del sistema Lex Doctor,
                 asegurando un sistema de trabajo que se basa en el respaldo de la acción comercial de cada despacho, sin correr riesgos, de manera segura, productiva y rentable.
             </td>
-            <td>
-                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="30%" width="30%">
-            </td>
         </tr>
         <tr>
-            <td>
-                <img src="./img/MIH.png" alt="Maria Isabel Hahn" height="50%" width="50%">
-            </td>
             <td>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sed provident tempore asperiores beatae nisi sit cum officia amet maxime nobis nemo, maiores similique est quibusdam quo excepturi reprehenderit et.
                 Eligendi enim voluptates, exercitationem mollitia laudantium excepturi dolor nostrum ex, dignissimos, et aliquid! Fugit exercitationem ratione adipisci optio accusamus. Voluptas quibusdam fuga mollitia aspernatur delectus ab quo magni, corrupti impedit?
                 Excepturi incidunt reiciendis quasi. Odit consectetur aut nihil a ab fuga, dignissimos officia, minus reprehenderit modi doloribus accusantium ipsam, repellat fugiat unde suscipit excepturi! Quisquam tenetur minima temporibus in recusandae?
+            </td>
+            <td>
+                <img src="./img/User.png" alt="Maria Isabel Hahn" height="50%" width="50%">
             </td>
         </tr>
     </table>
