--- a/nosotros.html
+++ b/nosotros.html
@@ -18,6 +18,10 @@
         </tr>
     </table>
     <h1>Quiénes somos</h1>
+    <pre><h3>
+        Aparece cuando tus clientes estén buscando o navegando en la red de búsqueda, YouTube, en la web y en redes sociales.
+        Te ayudamos a vender por internet a través de las más recientes estrategias digitales.
+    </pre></h3>
     <p>
         Somos una agencia dedicada ayudar a emprendimientos y empresas a conectar con su público, otorgando herreamientas y capacitaciones para iniciar en el mercado virtual.
         Nuestra misión es acercar los negocios al mercado virtual, dándoles la oportunidad de crecer y desarrollarse en el mundo informático.
