--- a/productos.html
+++ b/productos.html
@@ -17,8 +17,64 @@
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
+    <h1>Nuestras soluciones</h1>
+    <h2>Investigación de marca, análisis de mercado y estrategia digital.</h2>
     <table>
-        
+        <tr>
+            <th>
+                Estrategia de Marketing 360°
+            </th>
+            <th>
+                Pauta Digital
+            </th>
+            <th>
+                Diseño Web y E-commerce
+            </th>
+            <th>
+                Estrategia de contenidos
+            </th>
+            <th>
+                Branding y Diseño Gráfico
+            </th>
+            <th>
+                Brand Community
+            </th>
+            <th>
+                Ambassadors
+            </th>
+            <th>
+                CRM + Marketing automatizado
+            </th>
+        </tr>
+        <tr>
+            <td>
+                Diseñamos estrategias de marketing que se integran con las necesidades de tu negocio.  
+            </td>
+            <td>
+                Creamos un plan de medios enfocado en generar resultados relevantes para tu negocio.  
+            </td>
+            <td>
+                Creamos sitios y E-commerce mobile first pensados para alcanzar resultados concretos.
+            </td>
+            <td>
+                Diseñamos un plan integral de comunicación digital.
+            </td>
+            <td>
+                Diseñamos la identidad visual y verbal de tu marca.
+            </td>
+            <td>
+                Diseño y gestión de proyectos de inbound marketing destinados a atraer, captar y fidelizar una comunidad
+                de defensores y promotores de la marca entre clientes, empleados y otros grupos de interés.
+            </td>
+            <td>
+                Asistencia y activación de la identidad digital de un grupo de directivos, empleados o colaboradores como embajadores
+                en las redes sociales para construir marca empleadora y promover la reputación de la empresa
+                o la recomendación de sus productos y servicios.
+            </td>
+            <td>
+                Automatizamos procesos de marketing para nutrir tu base de clientes y generar la acción necesaria en el momento correcto.
+            </td>
+        </tr>
     </table>
     <table class="footer" id="contacto">
         <tr>
