Página de index y Css

--- a/index.html
+++ b/index.html
@@ -17,16 +17,40 @@
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae harum architecto, voluptas similique doloribus suscipit asperiores consequuntur iure aspernatur. Inventore porro possimus eum quasi, maiores nam enim iure soluta magni.
-Quaerat ipsa pariatur veniam cupiditate illo, nemo officia velit, eum impedit nisi iste iure magni est cum, adipisci incidunt voluptatibus dolores ab delectus beatae dolor doloremque a? Itaque, culpa perferendis?
-Distinctio, ducimus voluptate. Esse sequi praesentium, amet cupiditate atque quibusdam laudantium eveniet? Aut fugit cum blanditiis ullam ab dolores, quasi culpa magni asperiores id animi, nobis praesentium dicta, nam corrupti.
-Impedit dolorum possimus pariatur eligendi? Quis reprehenderit nesciunt inventore alias. Eum voluptates quisquam corporis ex quos incidunt, earum recusandae laboriosam veritatis? Quo aperiam earum molestias itaque vero cupiditate natus quod?
-Atque vel dignissimos error iure voluptates quam dicta quibusdam ipsa debitis rem eligendi non nobis necessitatibus consequuntur fugiat sed rerum sapiente nulla, unde enim alias temporibus cupiditate? Aperiam, voluptate commodi.
-Iusto reprehenderit corporis ut aliquid cupiditate perferendis eos sit deleniti necessitatibus hic cumque earum amet, eveniet aperiam? Inventore quia enim natus ex, rem nesciunt rerum, magnam delectus consequuntur non repellendus.
-Quisquam placeat recusandae, debitis cum exercitationem quas! Enim incidunt distinctio a. Corrupti nobis ducimus aliquam modi rem, tempore error quaerat, ad doloribus velit nulla ipsam necessitatibus doloremque! Libero, maiores quasi!
-Ipsam similique illo hic, libero iste recusandae adipisci harum? Dicta quis, odio illum officiis maxime possimus sint architecto illo fugit atque odit maiores, eligendi doloribus, quos hic voluptates recusandae modi.
-Earum repellendus soluta id expedita illo possimus ex consectetur commodi nostrum ratione dolorem, corporis quam, corrupti eius, sunt magnam excepturi! Ducimus nihil corporis est expedita dicta voluptatibus esse perferendis optio?
-Illo, vero quasi dolorum et modi saepe velit hic fugit magnam nostrum mollitia fuga eos esse assumenda eum quis officiis pariatur ex sit, quia commodi vitae, quam cumque doloremque. Iure?</p>
+    <h1 class="h1">¿Queres tener tu negocio en internet de verdad?</h1>
+    <h2 class="h2">En nuestra agencia tenes un equipo de apasionados que te ayudan a vender y crecer más por internet a través de estrategias digitales</h2>
+    <img src="./img/WBD.png" alt="Diseño Web"width="100%" height="100%">
+    <table>
+        <tr>
+            <th>
+                <h1 class="h1">Todo en un solo lugar!!!</h1>
+                <ul>
+                    <li><h2 class="h2">¿Tenes una empresa, un local, das servicios?</li>
+                    <li><h2 class="h2">¿Tenes una pagina web con tienda online?</h2></li>
+                    <li><h2 class="h2">¿Tenes redes sociales?</h2></li>
+                    <li><h2 class="h2">¿Tenes una estrategia de comunicación?</h2></li>
+                    <h2>Podemos ayudarte con esto y mucho más! <br>  y armamos la estrategia online!</h2>
+            </th>
+            <th><img src="./img/MKT.png" alt="Marketing online"width="70%" height="70%"></th>
+        </tr
+    </table>
+    <table>
+        <tr>
+            <td><img src="./img/EstrategiaOnline.png" alt="Marketing online"width="70%" height="70%"></td>
+            <td>
+                <h1 class="h1">Lo hacemos así!!!</h1>
+                <ol>
+                <li><h2 style="color: #517573">Conocemos tu negocio o emprendimeinto</h2></li>
+                <li><h2 style="color: #517573">Armamos la estrategia online</h2></li>
+                <li><h2 style="color: #517573">Diseñamos tu web o tienda</h2></li>
+                <li><h2 style="color: #517573">Creamos tus redes sociales</h2></li>
+                </ol>
+                <h2>Ya estás listo para estar en internet de Verdad!<br></h2>
+            </td>
+        </tr
+    </table>
+
+
     <table class="footer" id="contacto">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
