--- a/nosotros.html
+++ b/nosotros.html
@@ -11,9 +11,9 @@
     <table class="encabezado">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
-            <th><h3><a href="#">Inicio</a></h3></th>
+            <th><h3><a href="./index.html">Inicio</a></h3></th>
             <th><h3><a href="./productos.html">Productos</a></h3></th>
-            <th><h3><a href="./nosotros.html">Nosotros</a></h3></th>
+            <th><h3><a href="#">Nosotros</a></h3></th>
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
@@ -26,9 +26,10 @@
         </tr>
         <tr>
             <td>Si no estás, no existís</td>
-            <td><a href="#">Inicio</a>
+            <td>
+                <a href="./index.html">Inicio</a>
                 <br><a href="./productos.html">Productos</a>
-                <br><a href="./nosotros.html">Nosotros</a>
+                <br><a href="#">Nosotros</a>
                 <br><a href="https://docs.google.com/forms/d/e/1FAIpQLSckBKNcGfStT4NwInYEKjjncRi_xJC8_oNyHp9mYjIIJjKarA/viewform">Contacto</a></td>
             <td>
                 <a href="https://wa.me/5492995184587?text=Hola%20quisiera%20hacer%20una%20consulta"><img src="./img/IconoWasap.png" alt=""></a>
