--- a/productos.html
+++ b/productos.html
@@ -22,57 +22,51 @@
     <table>
         <tr>
             <th>
-                Estrategia de Marketing 360°
+                Estrategia de Marketing 360°, CRM + Marketing automatizado
             </th>
             <th>
-                Pauta Digital
+                Pauta Digital, E-commerce y Diseño Web
             </th>
             <th>
-                Diseño Web y E-commerce
+                Branding, estrategia de contenidos y Diseño gráfico
             </th>
             <th>
-                Estrategia de contenidos
-            </th>
-            <th>
-                Branding y Diseño Gráfico
-            </th>
-            <th>
-                Brand Community
-            </th>
-            <th>
-                Ambassadors
-            </th>
-            <th>
-                CRM + Marketing automatizado
+                Ambassadors & Brand Community
             </th>
         </tr>
         <tr>
             <td>
-                Diseñamos estrategias de marketing que se integran con las necesidades de tu negocio.  
+                Diseñamos estrategias de marketing que se integran con las necesidades de tu negocio.
+                Automatizamos procesos de marketing para nutrir tu base de clientes y generar la acción necesaria en el momento correcto.  
             </td>
             <td>
-                Creamos un plan de medios enfocado en generar resultados relevantes para tu negocio.  
-            </td>
-            <td>
-                Creamos sitios y E-commerce mobile first pensados para alcanzar resultados concretos.
+                Creamos un plan de medios enfocado en generar resultados relevantes para tu negocio.
+                Creamos sitios y E-commerce mobile first pensados para alcanzar resultados concretos.  
             </td>
             <td>
                 Diseñamos un plan integral de comunicación digital.
-            </td>
-            <td>
                 Diseñamos la identidad visual y verbal de tu marca.
             </td>
             <td>
                 Diseño y gestión de proyectos de inbound marketing destinados a atraer, captar y fidelizar una comunidad
                 de defensores y promotores de la marca entre clientes, empleados y otros grupos de interés.
-            </td>
-            <td>
                 Asistencia y activación de la identidad digital de un grupo de directivos, empleados o colaboradores como embajadores
                 en las redes sociales para construir marca empleadora y promover la reputación de la empresa
                 o la recomendación de sus productos y servicios.
             </td>
+        </tr>
+        <tr>
             <td>
-                Automatizamos procesos de marketing para nutrir tu base de clientes y generar la acción necesaria en el momento correcto.
+                <img src="./img/Marketing.png" alt="Marketing">
+            </td>
+            <td>
+                <img src="./img/Ecommerce.png" alt="E-commerce">
+            </td>
+            <td>
+                <img src="./img/Branding.png" alt="Branding">
+            </td>
+            <td>
+                <img src="./img/Ambassador.png" alt="Community">
             </td>
         </tr>
     </table>
