pics git remote add origin .

--- a/productos.html
+++ b/productos.html
@@ -66,7 +66,7 @@
                 <img src="./img/Branding.png" alt="Branding">
             </td>
             <td>
-                <img src="./img/Ambassador.png" alt="Community">
+                <img src="./img/Ambassador.png" alt="Community" width="30%" height="30%">
             </td>
         </tr>
     </table>
