agrego paǵina de producto e index modificado

--- a/nosotros.html
+++ b/nosotros.html
@@ -18,6 +18,7 @@
         </tr>
     </table>
 
+</table>
     <table class="footer" id="contacto">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
