--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li><h2 class="h2">¿Tenes una pagina web con tienda online?</h2></li>
                     <li><h2 class="h2">¿Tenes redes sociales?</h2></li>
                     <li><h2 class="h2">¿Tenes una estrategia de comunicación?</h2></li>
-                    <h2>Podemos ayudarte con esto y mucho más! <br>  y armamos la estrategia online!</h2>
+                    <h2>Podemos ayudarte con esto y mucho más! <br>Te ayudamos con la estrategia online!</h2>
             </th>
             <th><img src="./img/MKT.png" alt="Marketing online"width="70%" height="70%"></th>
         </tr
@@ -38,7 +38,7 @@
         <tr>
             <td><img src="./img/EstrategiaOnline.png" alt="Marketing online"width="70%" height="70%"></td>
             <td>
-                <h1 class="h1">Lo hacemos así!!!</h1>
+                <h1 class="h1">¿Cómo lo hacemos?</h1>
                 <ol>
                 <li><h2 style="color: #517573">Conocemos tu negocio o emprendimeinto</h2></li>
                 <li><h2 style="color: #517573">Armamos la estrategia online</h2></li>
@@ -49,7 +49,13 @@
             </td>
         </tr
     </table>
-
+    <table>
+        <tr>
+            <th></th>
+            <th><h1><a href="./productos.html">Conoce Nuestras Soluciones ;)</a></h1></th>
+            <th></th>
+        </tr>
+    </table>
 
     <table class="footer" id="contacto">
         <tr>
