--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Agencia de Diseño Web y Marketing Digital - MiSitioenLaNet</title>
+    <title>Todas las soluciones para estar un internet en MiSitioenLaNet</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -12,12 +12,48 @@
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
             <th><h3><a href="./index.html">Inicio</a></h3></th>
-            <th><h3><a href="#">Productos</a></h3></th>
-            <th><h3><a href="./nosotros.html">Nosotros</a></h3></th>
+            <th><h3><a href="./productos.html">Productos</a></h3></th>
+            <th><h3><a href="#">Nosotros</a></h3></th>
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
-
+</table>
+<h1 class="h1">NUESTRAS SOLUCIONES</h1>
+<h2 class="h2">TODO LO QUE NECESITAS PARA ESTAR EN INTERNET EN UN SOLO LUGAR</h2>
+<table>
+    <tr>
+        <th></th>
+        <th><h1 class="h1">Así creamos tu sitio web!!</h1></th>
+    <tr>
+        <td><img src="./img/diseño.png" alt="Diseño Web"width="70%" height="70%"></td>
+        <td>
+            <ol>
+                <li><h2 class="h2">Nos contás de vos y tu negocio</li>
+                    <li><h2 class="h2">Diseñamos el sitio y lo vemos juntos</h2></li>
+                    <li><h2 class="h2">Hacemos los textos e imágenes</h2></li>
+                    <li><h2 class="h2">Programamos y subimos el sitio a la web</h2></li>
+            </ol>
+            <h2>Todo esto en 30 días!!! <br> y con nuestro asesoramiento para la mejor experiencia de tu cliente!</h2>
+        </td>
+    </tr>
+</table>
+<table>
+    <tr>
+        <th><h1 class="h1">Los beneficios tu negocio online</h1></th>
+        <th></th>
+    <tr>
+        <td>
+            <ul>
+                <li><h2 class="h2">Ahora estas 24hs los 7 dias del año "OPEN"</li>
+                    <li><h2 class="h2">Te conocen y confian en vos</h2></li>
+                    <li><h2 class="h2">Si queres podes llegar a todo el mundo con tu propuesta</h2></li>
+                    <li><h2 class="h2">En definitiva, más y nuevos clientes que compran ;)</h2></li>
+            </ul>
+            <h2>Un buen sitio web es parte de tu estrategia de Marketing <br>Contás con nuestra expériencia para integrarnos a tu estrategia de negocios. </h2>
+        </td>
+        <td><img src="./img/Negocio-en-Internet-TP.jpg" alt="Diseño Web"width="100%" height="100%"></td>
+    </tr>
+</table>
     <table class="footer" id="contacto">
         <tr>
             <th><img src="./img/logoAgencia.png"></th>
