--- a/nosotros.html
+++ b/nosotros.html
@@ -30,17 +30,20 @@
     </p>
     <table>
         <tr>
-            <td>
-                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="30%" width="30%">
-            </td>
+            <th>
+                <img src="./img/JCG.jfif" alt="Juan Carlos Gomez" height="70%" width="70%">
+            </th>
             <td>
                 Con más de 20 años trabajando con abogados y con su propio software desarrollado,
                 hoy se enfoca en la gestión de diversos estudios jurídicos con la implementación del sistema Lex Doctor,
                 asegurando un sistema de trabajo que se basa en el respaldo de la acción comercial de cada despacho, sin correr riesgos, de manera segura, productiva y rentable.
             </td>
         </tr>
+    </table>
+    <table>
         <tr>
             <td>
+                Con 5 años de antigüedad en el uso de redes sociales, el diseño y las publicidades online
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio, sed provident tempore asperiores beatae nisi sit cum officia amet maxime nobis nemo, maiores similique est quibusdam quo excepturi reprehenderit et.
                 Eligendi enim voluptates, exercitationem mollitia laudantium excepturi dolor nostrum ex, dignissimos, et aliquid! Fugit exercitationem ratione adipisci optio accusamus. Voluptas quibusdam fuga mollitia aspernatur delectus ab quo magni, corrupti impedit?
                 Excepturi incidunt reiciendis quasi. Odit consectetur aut nihil a ab fuga, dignissimos officia, minus reprehenderit modi doloribus accusantium ipsam, repellat fugiat unde suscipit excepturi! Quisquam tenetur minima temporibus in recusandae?
