--- a/productos.html
+++ b/productos.html
@@ -57,13 +57,13 @@
         </tr>
         <tr>
             <td>
-                <img src="./img/Marketing.png" alt="Marketing">
+                <img src="./img/Marketing.png" alt="Marketing" width="30%" height="30%">
             </td>
             <td>
-                <img src="./img/Ecommerce.png" alt="E-commerce">
+                <img src="./img/Ecommerce.png" alt="E-commerce" width="30%" height="30%">
             </td>
             <td>
-                <img src="./img/Branding.png" alt="Branding">
+                <img src="./img/Branding.png" alt="Branding" width="30%" height="30%">
             </td>
             <td>
                 <img src="./img/Ambassador.png" alt="Community" width="30%" height="30%">
