--- a/nosotros.html
+++ b/nosotros.html
@@ -18,7 +18,7 @@
         </tr>
     </table>
     <h1>Quiénes somos</h1>
-    <pre><h3>
+    <pre><h3 class="subtitle">
         Aparece cuando tus clientes estén buscando o navegando en la red de búsqueda, YouTube, en la web y en redes sociales.
         Te ayudamos a vender por internet a través de las más recientes estrategias digitales.
     </pre></h3>
