paginas index y productos final

--- a/index.html
+++ b/index.html
@@ -17,44 +17,43 @@
             <th><h3><a href="#contacto">Contacto</a></h3></th>
         </tr>
     </table>
-    <h1 class="h1">¿Queres tener tu negocio en internet de verdad?</h1>
-    <h2 class="h2">En nuestra agencia tenes un equipo de apasionados que te ayudan a vender y crecer más por internet a través de estrategias digitales</h2>
+    <h1>¿Queres tener tu negocio en internet de verdad?</h1>
+    <h2>En nuestra agencia tenes un equipo de apasionados que te ayudan a vender y crecer más por internet a través de estrategias digitales</h2>
     <img src="./img/WBD.png" alt="Diseño Web"width="100%" height="100%">
     <table>
         <tr>
-            <th>
-                <h1 class="h1">Todo en un solo lugar!!!</h1>
+            <th><h1>Todo en un solo lugar!!!</h1></th>
+            <th></th>
+        <tr>
+            <td>
                 <ul>
-                    <li><h2 class="h2">¿Tenes una empresa, un local, das servicios?</li>
-                    <li><h2 class="h2">¿Tenes una pagina web con tienda online?</h2></li>
-                    <li><h2 class="h2">¿Tenes redes sociales?</h2></li>
-                    <li><h2 class="h2">¿Tenes una estrategia de comunicación?</h2></li>
-                    <h2>Podemos ayudarte con esto y mucho más! <br>Te ayudamos con la estrategia online!</h2>
-            </th>
-            <th><img src="./img/MKT.png" alt="Marketing online"width="70%" height="70%"></th>
-        </tr
+                    <li><h2>¿Tenes una empresa, un local, das servicios?</li>
+                    <li><h2>¿Tenes una pagina web con tienda online?</h2></li>
+                    <li><h2>¿Tenes redes sociales?</h2></li>
+                    <li><h2>¿Tenes una estrategia de comunicación?</h2></li>
+                </ul>
+                <h2 style="color: #000">Podemos ayudarte con esto y mucho más! <br>Te ayudamos con la estrategia online!</h2>  
+            </td>
+            <td><img src="./img/MKT.png" alt="Marketing online"width="70%" height="70%"></td>
+        </tr>
     </table>
     <table>
         <tr>
             <td><img src="./img/EstrategiaOnline.png" alt="Marketing online"width="70%" height="70%"></td>
             <td>
-                <h1 class="h1">¿Cómo lo hacemos?</h1>
+                <h1>¿Cómo lo hacemos?</h1>
                 <ol>
-                <li><h2 style="color: #517573">Conocemos tu negocio o emprendimeinto</h2></li>
-                <li><h2 style="color: #517573">Armamos la estrategia online</h2></li>
-                <li><h2 style="color: #517573">Diseñamos tu web o tienda</h2></li>
-                <li><h2 style="color: #517573">Creamos tus redes sociales</h2></li>
+                <li><h2>Conocemos tu negocio o emprendimeinto</h2></li>
+                <li><h2>Armamos la estrategia online</h2></li>
+                <li><h2>Diseñamos tu web o tienda</h2></li>
+                <li><h2>Creamos tus redes sociales</h2></li>
                 </ol>
-                <h2>Ya estás listo para estar en internet de Verdad!<br></h2>
+                <h2 style="color: #000">Ya estás listo para estar en internet de Verdad!<br></h2>
             </td>
-        </tr
+        </tr>
     </table>
     <table>
-        <tr>
-            <th></th>
-            <th><h1><a href="./productos.html">Conoce Nuestras Soluciones ;)</a></h1></th>
-            <th></th>
-        </tr>
+        <h1><a href="./productos.html">Conoce Nuestras Soluciones ;)</a></h1></th>
     </table>
 
     <table class="footer" id="contacto">
