--- a/productos.html
+++ b/productos.html
@@ -18,12 +18,12 @@
         </tr>
     </table>
 </table>
-<h1 class="h1">NUESTRAS SOLUCIONES</h1>
-<h2 class="h2">TODO LO QUE NECESITAS PARA ESTAR EN INTERNET EN UN SOLO LUGAR</h2>
+<h1>NUESTRAS SOLUCIONES</h1>
+<h2>TODO LO QUE NECESITAS PARA ESTAR EN INTERNET EN UN SOLO LUGAR</h2>
 <table>
     <tr>
         <th></th>
-        <th><h1 class="h1">Así creamos tu sitio web!!</h1></th>
+        <th><h1>Así creamos tu sitio web!!</h1></th>
     <tr>
         <td><img src="./img/diseño.png" alt="Diseño Web"width="70%" height="70%"></td>
         <td>
@@ -33,26 +33,29 @@
                     <li><h2 class="h2">Hacemos los textos e imágenes</h2></li>
                     <li><h2 class="h2">Programamos y subimos el sitio a la web</h2></li>
             </ol>
-            <h2>Todo esto en 30 días!!! <br> y con nuestro asesoramiento para la mejor experiencia de tu cliente!</h2>
+            <h2 style="color: #000">Todo esto en 30 días!!! <br> y con nuestro asesoramiento para la mejor experiencia de tu cliente!</h2>
         </td>
     </tr>
 </table>
 <table>
     <tr>
-        <th><h1 class="h1">Los beneficios tu negocio online</h1></th>
+        <th><h1>Los beneficios tu negocio online</h1></th>
         <th></th>
     <tr>
         <td>
             <ul>
-                <li><h2 class="h2">Ahora estas 24hs los 7 dias del año "OPEN"</li>
-                    <li><h2 class="h2">Te conocen y confian en vos</h2></li>
-                    <li><h2 class="h2">Si queres podes llegar a todo el mundo con tu propuesta</h2></li>
-                    <li><h2 class="h2">En definitiva, más y nuevos clientes que compran ;)</h2></li>
+                <li><h2>Ahora estas 24hs los 7 dias del año "OPEN"</li>
+                    <li><h2>Te conocen y confian en vos</h2></li>
+                    <li><h2>Si queres podes llegar a todo el mundo con tu propuesta</h2></li>
+                    <li><h2>En definitiva, más y nuevos clientes que compran ;)</h2></li>
             </ul>
-            <h2>Un buen sitio web es parte de tu estrategia de Marketing <br>Contás con nuestra expériencia para integrarnos a tu estrategia de negocios. </h2>
+            <h2 style="color: #000">Un buen sitio web es parte de tu estrategia de Marketing <br>Contás con nuestra expériencia para integrarnos a tu estrategia de negocios. </h2>
         </td>
         <td><img src="./img/Negocio-en-Internet-TP.jpg" alt="Diseño Web"width="100%" height="100%"></td>
     </tr>
+</table>
+<table>
+    <h1>Contactanos desde whatsapp y te asesoramos</h1>
 </table>
     <table class="footer" id="contacto">
         <tr>
